// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionType > should render in lg 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionType"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Type
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Multipayment
      </div>
    </div>
    <div
      class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-1nqcsx"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="multipayment"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
            />
            <g
              transform="translate(299.777 174.25)"
            >
              <path
                d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
              />
              <circle
                cx="-292.7"
                cy="-168"
                r="3.1"
              />
            </g>
            <g
              transform="translate(299.777 174.25)"
            >
              <path
                d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
              />
              <circle
                cx="-284.9"
                cy="-166.4"
                r="2.6"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in md 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionType"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Type
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Multipayment
      </div>
    </div>
    <div
      class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-1nqcsx"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="multipayment"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
            />
            <g
              transform="translate(299.777 174.25)"
            >
              <path
                d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
              />
              <circle
                cx="-292.7"
                cy="-168"
                r="3.1"
              />
            </g>
            <g
              transform="translate(299.777 174.25)"
            >
              <path
                d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
              />
              <circle
                cx="-284.9"
                cy="-166.4"
                r="2.6"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in sm 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionType"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Transaction Type
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Multipayment
        </div>
        <span
          class="text-theme-text dark:text-theme-secondary-600"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="multipayment"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
                />
                <g
                  transform="translate(299.777 174.25)"
                >
                  <path
                    d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
                  />
                  <circle
                    cx="-292.7"
                    cy="-168"
                    r="3.1"
                  />
                </g>
                <g
                  transform="translate(299.777 174.25)"
                >
                  <path
                    d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
                  />
                  <circle
                    cx="-284.9"
                    cy="-166.4"
                    r="2.6"
                  />
                </g>
              </g>
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in xl 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionType"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Type
      </div>
      <div
        class="flex items-center font-semibold"
      >
        Multipayment
      </div>
    </div>
    <div
      class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-1nqcsx"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="multipayment"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
            />
            <g
              transform="translate(299.777 174.25)"
            >
              <path
                d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
              />
              <circle
                cx="-292.7"
                cy="-168"
                r="3.1"
              />
            </g>
            <g
              transform="translate(299.777 174.25)"
            >
              <path
                d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
              />
              <circle
                cx="-284.9"
                cy="-166.4"
                r="2.6"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in xs 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionType"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Transaction Type
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Multipayment
        </div>
        <span
          class="text-theme-text dark:text-theme-secondary-600"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="multipayment"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
                />
                <g
                  transform="translate(299.777 174.25)"
                >
                  <path
                    d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
                  />
                  <circle
                    cx="-292.7"
                    cy="-168"
                    r="3.1"
                  />
                </g>
                <g
                  transform="translate(299.777 174.25)"
                >
                  <path
                    d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
                  />
                  <circle
                    cx="-284.9"
                    cy="-166.4"
                    r="2.6"
                  />
                </g>
              </g>
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
